# sweet-egison

./: .gitignore  .hlint.yaml  CHANGELOG.md  LICENSE  README.md  brittany.yaml  cabal.project  sweet-egison.cabal
.github/workflows/: latest.yml  release.yml
benchmark/: comb2.hs  perm2.hs
dev/: brittany.sh  install_pre_commit_hook.sh  ormolu.sh
dev/ci/: github_release.sh
example/: cdcl.hs  comb2.hs  dp.hs  matcher.hs  primeTriplet  primeTriplet.dyn_o  primeTriplet.hs  prime_triplet.hs  simple  simple.dyn_hi  simple.dyn_o  simple.hs
sample/: cdcl.hs  comb2.hs  delete.hs  deleteAs.hs  dp.hs  perm2.hs  poker.hs  primeTriplet.dyn_hi  primeTriplet.hs  simple.hs  vp.hs
src/Control/: Egison.hs
src/Control/Egison/: Match.hs  Matcher.hs  Pattern.hs  QQ.hs
src/Control/Egison/Matcher/: Collection.hs  List.hs  Multiset.hs  Pair.hs  Set.hs  UnorderedPair.hs
src/Control/Monad/: Search.hs
src/Control/Monad/Search/: QQ.hs
src/Data/: Query.hs  View.hs
src/Data/Query/: Pattern.hs  QQ.hs
src/Data/Query/Pattern/: Collection.hs  InternalTH.hs  Tuple.hs  Value.hs
src/Data/View/: Multiset.hs  Pair.hs  Set.hs
test/Control/: EgisonSpec.hs
